Fix keyboard scrolling for elements using overflow:scroll by scrolling the nearest scrollable view from the caret. b=251986 r=roc sr=dbaron